Examining Police Records of 2013-2015 Traffic Stops

--- a/Traffic_Stop.ipynb
+++ b/Traffic_Stop.ipynb
@@ -3062,7 +3062,9 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# If using ALL available variables:\n",
@@ -4571,7 +4573,7 @@
     "<BR/>\n",
     "The overall conclusions from this study are as follows:\n",
     "<BR/><BR/>\n",
-    "- Results indicate that racial bias does appear to play a part in some of the interactions between polic and road users. \n",
+    "- Results indicate that racial bias does appear to play a part in some of the interactions between police and road users. \n",
     "- Outcomes of these traffic stops can to some degree be modeled along racial lines, as evidenced by correlations between outcome and race 'black', race 'latino', and race 'white' in the correlation matrix. However, there are other features and factors more influential than race, although they all relate to the department or the offence, not to the subject.    "
    ]
   },
